fixed z-index footer

--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ footer{
     align-items: center;
     text-align: center;
     font-size: 10px;
-    z-index: -1;
+  
 }
 
 footer p{
